@@ -990,6 +990,12 @@ IATI出版社
 #search_commitment_max_txt
 最大承诺阈值
 
+#search_result_type_txt
+结果类型
+
+#search_document_category_txt
+文件类别
+
 #search_view_txt
 EXPLORE <span>筛选</span>
 
