@@ -1023,6 +1023,12 @@ Commitment Threshold Min
 #search_commitment_max_txt
 Commitment Threshold Max
 
+#search_result_type_txt
+Result Type
+
+#search_document_category_txt
+Document Category
+
 #search_view_txt
 EXPLORE <span>filters</span>
 
