@@ -992,6 +992,12 @@ Seuil minimum d'engagement
 #search_commitment_max_txt
 Seuil maximal d'engagement
 
+#search_result_type_txt
+Type de résultat
+
+#search_document_category_txt
+Catégorie de document
+
 #search_view_txt
 EXPLORE <span>filtres</span>
 
