@@ -374,6 +374,16 @@
 	<div class="search_query">
 		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_commitment_max_txt}</span>
 	</div>
+	
+#search_display_result_type trim=ends
+	<div class="search_query">
+		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_result_type_txt}</span>
+	</div>
+	
+#search_display_document_category trim=ends
+	<div class="search_query">
+		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_document_category_txt}</span>
+	</div>
 
 #main_searchmin
 <div class="default min">
