@@ -989,6 +989,12 @@ IATI प्रकाशक
 #search_commitment_max_txt
 अधिकतम प्रतिबद्धता थ्रेसहोल्ड
 
+#search_result_type_txt
+परिणाम प्रकार
+
+#search_document_category_txt
+परिणाम प्रकार
+
 #search_view_txt
 EXPLORE <span>फिल्टर</span>
 
