@@ -992,6 +992,12 @@ IATI出版
 #search_commitment_max_txt
 最大コミットメントしきい値
 
+#search_result_type_txt
+結果タイプ
+
+#search_document_category_txt
+文書カテゴリ
+
 #search_view_txt
 EXPLORE <span>フィルタ</span>
 
