@@ -989,6 +989,12 @@ Umbral mínimo de compromiso
 #search_commitment_max_txt
 Umbral de compromiso máximo
 
+#search_result_type_txt
+Tipo de resultado
+
+#search_document_category_txt
+Categoría de documento
+
 #search_view_txt
 EXPLORE <span>filtros</span>
 
