@@ -423,6 +423,22 @@
 		<option value></option>
 		{search_options_commitment_max}
 	</select>
+</div><div class="search_wrap mid">
+	<div class="search_label">
+		<span>&#10096;&#10097;</span> {search_result_type_txt}
+	</div>
+	<select aria-label="Select a result type from this dropdown" id="view_search_select_result_type" class="chosen" multiple>
+		<option value></option>
+		{search_options_result_type}
+	</select>
+</div><div class="search_wrap">
+	<div class="search_label">
+		<span>&#10096;&#10097;</span> {search_document_category_txt}
+	</div>
+	<select aria-label="Select a document category from this dropdown" id="view_search_select_document_category" class="chosen" multiple>
+		<option value></option>
+		{search_options_document_category}
+	</select>
 </div>
 </div>
 
