@@ -1,3 +1,9 @@
+Development Portal (2019-11-18 shi)
+==============================
+Add result type and documentary category as filters
+Add translations
+
+
 Development Portal (2019-11-15 shi)
 ==============================
 Add total commitment threshold
